; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sfxge/extr_sfxge_tx.c_tso_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sfxge/extr_sfxge_tx.c_tso_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sfxge_txq = type { i32*, %struct.sfxge_softc* }
%struct.sfxge_softc = type { i32 }

@M_SFXGE = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sfxge_txq*)* @tso_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tso_init(%struct.sfxge_txq* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sfxge_txq*, align 8
  %4 = alloca %struct.sfxge_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.sfxge_txq* %0, %struct.sfxge_txq** %3, align 8
  %8 = load %struct.sfxge_txq*, %struct.sfxge_txq** %3, align 8
  %9 = getelementptr inbounds %struct.sfxge_txq, %struct.sfxge_txq* %8, i32 0, i32 1
  %10 = load %struct.sfxge_softc*, %struct.sfxge_softc** %9, align 8
  store %struct.sfxge_softc* %10, %struct.sfxge_softc** %4, align 8
  %11 = load %struct.sfxge_softc*, %struct.sfxge_softc** %4, align 8
  %12 = getelementptr inbounds %struct.sfxge_softc, %struct.sfxge_softc* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @TSOH_PAGE_COUNT(i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = zext i32 %15 to i64
  %17 = mul i64 %16, 4
  %18 = trunc i64 %17 to i32
  %19 = load i32, i32* @M_SFXGE, align 4
  %20 = load i32, i32* @M_WAITOK, align 4
  %21 = call i32* @malloc(i32 %18, i32 %19, i32 %20)
  %22 = load %struct.sfxge_txq*, %struct.sfxge_txq** %3, align 8
  %23 = getelementptr inbounds %struct.sfxge_txq, %struct.sfxge_txq* %22, i32 0, i32 0
  store i32* %21, i32** %23, align 8
  store i32 0, i32* %6, align 4
  br label %24

24:                                               ; preds = %42, %1
  %25 = load i32, i32* %6, align 4
  %26 = load i32, i32* %5, align 4
  %27 = icmp ult i32 %25, %26
  br i1 %27, label %28, label %45

28:                                               ; preds = %24
  %29 = load %struct.sfxge_softc*, %struct.sfxge_softc** %4, align 8
  %30 = load i32, i32* @PAGE_SIZE, align 4
  %31 = load %struct.sfxge_txq*, %struct.sfxge_txq** %3, align 8
  %32 = getelementptr inbounds %struct.sfxge_txq, %struct.sfxge_txq* %31, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  %34 = load i32, i32* %6, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32, i32* %33, i64 %35
  %37 = call i32 @sfxge_dma_alloc(%struct.sfxge_softc* %29, i32 %30, i32* %36)
  store i32 %37, i32* %7, align 4
  %38 = load i32, i32* %7, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %41

40:                                               ; preds = %28
  br label %46

41:                                               ; preds = %28
  br label %42

42:                                               ; preds = %41
  %43 = load i32, i32* %6, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %6, align 4
  br label %24

45:                                               ; preds = %24
  store i32 0, i32* %2, align 4
  br label %68

46:                                               ; preds = %40
  br label %47

47:                                               ; preds = %51, %46
  %48 = load i32, i32* %6, align 4
  %49 = add nsw i32 %48, -1
  store i32 %49, i32* %6, align 4
  %50 = icmp sgt i32 %48, 0
  br i1 %50, label %51, label %59

51:                                               ; preds = %47
  %52 = load %struct.sfxge_txq*, %struct.sfxge_txq** %3, align 8
  %53 = getelementptr inbounds %struct.sfxge_txq, %struct.sfxge_txq* %52, i32 0, i32 0
  %54 = load i32*, i32** %53, align 8
  %55 = load i32, i32* %6, align 4
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds i32, i32* %54, i64 %56
  %58 = call i32 @sfxge_dma_free(i32* %57)
  br label %47

59:                                               ; preds = %47
  %60 = load %struct.sfxge_txq*, %struct.sfxge_txq** %3, align 8
  %61 = getelementptr inbounds %struct.sfxge_txq, %struct.sfxge_txq* %60, i32 0, i32 0
  %62 = load i32*, i32** %61, align 8
  %63 = load i32, i32* @M_SFXGE, align 4
  %64 = call i32 @free(i32* %62, i32 %63)
  %65 = load %struct.sfxge_txq*, %struct.sfxge_txq** %3, align 8
  %66 = getelementptr inbounds %struct.sfxge_txq, %struct.sfxge_txq* %65, i32 0, i32 0
  store i32* null, i32** %66, align 8
  %67 = load i32, i32* %7, align 4
  store i32 %67, i32* %2, align 4
  br label %68

68:                                               ; preds = %59, %45
  %69 = load i32, i32* %2, align 4
  ret i32 %69
}

declare dso_local i32 @TSOH_PAGE_COUNT(i32) #1

declare dso_local i32* @malloc(i32, i32, i32) #1

declare dso_local i32 @sfxge_dma_alloc(%struct.sfxge_softc*, i32, i32*) #1

declare dso_local i32 @sfxge_dma_free(i32*) #1

declare dso_local i32 @free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
